<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_padding"
    android:layout_marginLeft="@dimen/default_padding"
    android:layout_marginRight="@dimen/default_padding"
    android:background="@color/color_primary_light"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/color_primary_light"
    app:cardCornerRadius="@dimen/default_padding">

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="24sp"
        tools:text="Item 2" />
</android.support.v7.widget.CardView>